--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.0.1",
   "description": "jo!",
   "main": "src/msgcat.js",
-  "scripts": {
-    "test": "nope"
-  },
   "repository": {
     "type": "git",
-    "url": "nope"
+    "url": "git://github.com/msg-cat/msgcat.git"
   },
   "keywords": [
     "nope"
@@ -18,6 +15,22 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
-    "strophe": "^1.2.4"
+    "strophe": "^1.2.4",
+    "strophejs-plugins": "0.0.6"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "watch": "webpack --config webpack.config.js --watch"
+  },
+  "devDependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14"
   }
 }
